QUIC Connection Migration V2: always block the packet writer when HandleWriteError retruns ERR_IO_PENDING.

Bug: 859259
Change-Id: I24ccedddd21f1a566b56f41bee30395a88a53a45
Reviewed-on: https://chromium-review.googlesource.com/1121592
Reviewed-by: Ryan Hamilton <rch@chromium.org>
Commit-Queue: Zhongyi Shi <zhongyi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572035}
Former-commit-id: 3c4c9e95d435f760cef0355caf3b23cc59c87a3a